--- a/session6/challenge/1_build_an_app/Gemfile
+++ b/session6/challenge/1_build_an_app/Gemfile
@@ -1,6 +1,7 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "sinatra"
+gem "sinatra", "~> 1.4"
 gem "rspec"
 gem "rack"
+gem "rack-test", "~> 0.6"
 gem "capybara"
